<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:columnCount="1">

        <TextView
            android:id="@+id/nameAppAboutTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/text_color_primary"
            android:text="@string/app_name"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/versionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/text_color_primary"
            android:text="@string/version_app"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/aboutTextAppTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/text_color_primary"
            android:text="@string/about_text_app"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/creatorsAppTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/text_color_primary"
            android:text="@string/creators_app"
            android:layout_marginTop="40dp"
            android:textStyle="bold"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/creator1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/text_color_primary"
            android:text="@string/creator1"
            android:layout_marginTop="16dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/creator2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/text_color_primary"
            android:text="@string/creator2"
            android:layout_marginTop="20dp"
            android:textSize="18sp" />

        s
    </GridLayout>

</LinearLayout>